--- a/client/package.json
+++ b/client/package.json
@@ -8,18 +8,23 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
+    "buffer": "^6.0.3",
     "moment": "^2.30.1",
     "nth-check": "^2.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-loading": "^2.0.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.3",
+    "react-spinners": "^0.17.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
-    "sweetalert2": "^11.19.1",
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.21.0",
     "thunk": "^0.0.1",
     "web-vitals": "^2.1.4"
   },
